apps/media/arr-base/deployment.yaml
# https://kubernetes.io/docs/concepts/workloads/controllers/deployment/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  labels:
    app: app
spec:
  selector:
    matchLabels:
      app: app
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: app
    spec:
      # for NFS because idk how k8s users work so just run as root :nod:
      securityContext:
        runAsUser: 0
        runAsGroup: 0

      containers:
        - name: app
          image: scratch
          ports:
            - containerPort: 8989
              name: webui

          volumeMounts:
            - name: media-nfs
              mountPath: /mnt/media

            - name: config
              mountPath: /config

      volumes:
        - name: media-nfs
          nfs:
            server: 192.168.8.177
            path: /mnt/swim/k8s-media

        - name: config
          persistentVolumeClaim:
            claimName: config

      restartPolicy: Always
