apps/media/arr-base/service.yaml
---
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: svc
spec:
  selector:
    app: arr
  type: ClusterIP
  ports:
    - name: webui
      protocol: TCP
      port: 80
      targetPort: webui
